--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDh5bDZwODNhM2NxNGw1NjNwMTdodmM2Y2ZseG54Y3QxZDFvMGRxbCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/YdymLnBeyr70rfKqAj/giphy.gif" class="hoofdfoto">
         <h1>lol ik ga het toch vragen hehe (is da stout?)</h1>
         <div class="knop-sectie">
-            <button id="stoutJaKnop" class="knop ja">ja jij verdient wat maar stel je vraag maar</button>
+            <button id="stoutJaKnop" class="knop ja">ja jij verdient wel veel grrrrrr...maar stel je vraag maar</button>
         </div>
     </div>
 
